infra/proxmox/vms/orchestration/k8s/keda/yml/apache-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: apache
      containers:
      - name: apache
        image: php:apache
        ports:
        - containerPort: 80
          #volumeMounts:
          #- name: delay-php-volume
          #mountPath: /var/www/html/index.php
          #subPath: index.php
          # volumes:
          #- name: delay-php-volume
          #configMap:
          #name: delay-php-config
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: default
spec:
  selector:
    app: apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
