infra/proxmox/vms/orchestration/k8s/keda/yml/apache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: apache-ingress
 namespace: keda # <-- namespace where the Add-On is installed
spec:
 ingressClassName: nginx
 rules:
 - host: apache.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: keda-add-ons-http-interceptor-proxy
           port:
             number: 8080
